test/invalid/baseline/duplicate.txt
Syntax error at line 3, since `typedef Test`:
interface Test {
               ^ The name "Test" of type "typedef" was already seen
